# Nai

./: .gitignore  CMakeLists.txt  README.md  a_star.cpp  main.cpp  maze.txt
data/: level1 (copy).txt  level1(16).txt  level1.txt  level1co.txt  level32.txt
src/: a_star.cpp  a_star.h  map.bak  map.cpp  map.h
